<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="334dp"
    android:layout_height="262dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">
    <TextView
        android:id="@+id/x_c_nh_n_tr"
        android:layout_width="235dp"
        android:layout_height="61dp"
        android:textStyle="bold"
        android:text="@string/x_c_nh_n_tr"
        android:lineHeight="34sp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="9dp"
        android:textSize="28sp"
        android:textColor="#28386D"
        android:gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/n_u_s_n_ph_"
            android:layout_width="307dp"
            android:layout_height="71dp"

            android:text="@string/n_u_s_n_ph_"
            android:textAppearance="@style/n_u_s_n_ph_"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/b_n_h_y_c_n"
            android:layout_width="289dp"
            android:layout_height="54dp"

            android:text="@string/b_n_h_y_c_n"
            android:textAppearance="@style/b_n_h_y_c_n"
            android:gravity="center_vertical"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_xac_nhan_tra_hang_huy_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="Hủy"
            app:cornerRadius="10dp"
            app:strokeColor="@color/primary"
            android:layout_gravity="start"
            app:strokeWidth="1dp"
            android:textColor="@color/primary"
            app:rippleColor="@color/primary_indicator"
            android:textSize="18sp"
            android:backgroundTint="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_xac_nhan_tra_hang_tra_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/tra"
            app:cornerRadius="10dp"
            android:layout_gravity="end"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp"
            android:textColor="@color/on_primary"
            app:rippleColor="@color/primary_indicator"
            android:textSize="18sp"
            android:backgroundTint="@color/secondary"/>
    </FrameLayout>
</LinearLayout>