<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.thue_detail.DetailThueFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.apolom.aodoshop.fragments.commons.app_bar.DetailAppBar
            android:id="@+id/fragment_mua_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/fragment_thue_detail_img"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img" />

        <TextView
            android:id="@+id/fragment_thue_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:text="Đồng phục quốc phòng"
            android:textColor="#040404"
            android:textFontWeight="700"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fragment_thue_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="26dp"
            android:gravity="center_vertical"
            android:text="1500 đồng/ngày"
            android:textColor="#040404"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:text="@string/cdp"
            android:textColor="#040404"
            android:textFontWeight="700"
            android:textSize="20sp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_mua_sizes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:scrollbars="none"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start">
            <TextView
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:height="38dp"
                android:layout_marginStart="26dp"

                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="Chọn loại áo: "
                android:textColor="#040404"
                android:textFontWeight="700"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/fragment_detail_thue_select_nam"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Nam"
                android:gravity="center"
                android:textSize="16sp"

                android:textFontWeight="400"
                android:padding="12dp"
                android:layout_marginVertical="8dp"

                android:background="@drawable/back_corner_select_on"
                />
            <TextView
                android:id="@+id/fragment_detail_thue_select_nu"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Nữ"
                android:gravity="center"
                android:textSize="16sp"
                android:textFontWeight="400"
                android:padding="12dp"
                android:layout_margin="8dp"
                android:background="@drawable/back_corner_select_off"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="4dp"
            android:layout_gravity="start">
            <TextView
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:height="38dp"
                android:layout_marginStart="26dp"

                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:text="@string/slc"
                android:textColor="#040404"
                android:textFontWeight="700"
                android:textSize="20sp" />
            <Button
                android:id="@+id/fragment_mua_decrease"
                android:layout_width="40dp"
                android:layout_height="38dp"
                android:textSize="24sp"
                android:background="@drawable/icon_minus" />

            <!-- TextView hiển thị số lượng -->

            <TextView
                android:id="@+id/fragment_mua_so_luong"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:height="38dp"

                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/count"
                android:textColor="#040404"
                android:textFontWeight="700"
                android:textSize="20sp" />

            <!-- Nút tăng số lượng -->
            <Button
                android:id="@+id/fragment_mua_increase"
                android:layout_width="40dp"
                android:layout_height="38dp"
                android:text="+"
                android:textSize="24sp"
                android:background="@drawable/icon_plus"
                />

        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start">

            <TextView
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="26dp"
                android:height="38dp"
                android:gravity="center_vertical"
                android:text="Ngày nhận"
                android:textColor="#040404"
                android:textFontWeight="700"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fragment_thue_detail_date_start_show"
                android:layout_width="100dp"
                android:layout_height="38dp"
                android:layout_toStartOf="@+id/fragment_thue_detail_date_icon_start"
                android:text="27/06/2024"
                android:textSize="16dp"
                android:background="@drawable/back_date"
                android:gravity="center_vertical|end"
                />

            <ImageView
                android:id="@+id/fragment_thue_detail_date_icon_start"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:scaleType="fitCenter"
                android:layout_alignParentEnd="true"
                android:src="@drawable/icon_date_picker"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_gravity="start">

            <TextView
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="26dp"
                android:height="38dp"
                android:gravity="center_vertical"
                android:text="Ngày trả"
                android:textColor="#040404"
                android:textFontWeight="700"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fragment_thue_detail_date_end_show"
                android:layout_width="100dp"
                android:layout_height="38dp"
                android:layout_toStartOf="@+id/fragment_thue_detail_date_icon_end"
                android:text="27/06/2024"
                android:textSize="16dp"
                android:background="@drawable/back_date"
                android:gravity="center_vertical|end"
                />

            <ImageView
                android:id="@+id/fragment_thue_detail_date_icon_end"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:scaleType="fitCenter"
                android:layout_alignParentEnd="true"
                android:src="@drawable/icon_date_picker"
                />


        </RelativeLayout>



    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_gravity="bottom"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginBottom="0dp"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="90.000 vnd "
                android:gravity="center_vertical"
                android:textSize="38sp"
                android:textColor="#28386D"
                android:textFontWeight="700"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"

                />
            <Button
                android:id="@+id/fragment_mua_btn_mua"
                android:layout_width="172dp"
                android:layout_height="match_parent"
                android:height="56dp"
                android:text="thanh toán"
                app:cornerRadius="14dp"
                android:textColor="@color/on_primary"
                android:textSize="28sp"
                app:rippleColor="@color/primary_indicator"
                android:backgroundTint="#28386D"
                />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>